# DComp-Private-APIs-docs

./: .gitmodules  DirectComposition_Private_APIs.md
.github/workflows/: ci.yml
DirectCompositionApp/: CMakeLists.txt  DCompHelper.cpp  DCompHelper.h  DirectManipHelper.cpp  DirectManipHelper.h  PresentationFactoryDemo.cpp  PresentationFactoryDemo.h  PrivateApiDemo.cpp  PrivateApiDemo.h  README.md  TreeSitterHighlighter.cpp  TreeSitterHighlighter.h  build.bat  main.cpp
DirectCompositionApp/tests/: highlighter_test.cpp
